# virgo

./: .gitignore  CMakeLists.txt  README.md
include/AST/: Token.h
include/Common/: ByteLocation.h  CodePointsIterator.h  Encoding.h  Error.h  IO.h  Span.h  Templates.h
include/Diagnostic/: Diagnostic.h  Diagnostics.h  DiagnosticsEmitter.h
include/Intern/: StringHash.h  StringRef.h  XXHash.h
include/Parser/: Lexer.h
src/AST/: Token.cpp
src/Common/: ByteLocation.cpp  CodePointsIterator.cpp  Encoding.cpp  IO.cpp  Span.cpp
src/Diagnostic/: Diagnostic.cpp  Diagnostics.cpp  DiagnosticsEmitter.cpp
src/Intern/: StringHash.cpp
src/Parser/: Lexer.cpp
tests/Common/: Encoding.cpp
tests/Parser/: Lexer.cpp
